[BIG UI REFACTORING] Glassmorphism

--- a/src/@core/layout/components/navbar/navbar.component.html
+++ b/src/@core/layout/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
           <span class="brand-logo">
             <img [src]="defaultCoreConfig.app.appLogoImage" alt="brand-logo" height="36" width="48" />
           </span>
-          <h2 class="brand-text mb-0">{{ defaultCoreConfig.app.appTitle }}</h2>
+          <h2 class="brand-text text-dark mb-0">{{ defaultCoreConfig.app.appTitle }}</h2>
         </a>
       </li>
     </ul>
