--- a/src/app/modules/challenges/components/challenge-card/challenge-card.component.html
+++ b/src/app/modules/challenges/components/challenge-card/challenge-card.component.html
@@ -1,6 +1,7 @@
-<div [@fadeInOnEnter] class="table-responsive">
-  <table class="table challenge-card">
-    <tbody>
+<div class="card mb-50">
+  <div [@fadeInOnEnter] class="table-responsive">
+    <table class="table challenge-card">
+      <tbody>
       <tr>
         <td>
           <challenges-user-view
@@ -78,6 +79,7 @@
           }
         </td>
       </tr>
-    </tbody>
-  </table>
+      </tbody>
+    </table>
+  </div>
 </div>
