--- a/src/app/modules/challenges/pages/challenges/sections/section-in-queue/section-in-queue.component.html
+++ b/src/app/modules/challenges/pages/challenges/sections/section-in-queue/section-in-queue.component.html
@@ -7,7 +7,7 @@
           count="2"
           animation="pulse"
           appearance="line"
-          [theme]="{height: '185px', background: 'var(--primary)'}"
+          [theme]="{height: '185px', background: 'var(--skeleton-color)'}"
         ></ngx-skeleton-loader>
       </div>
     }
