--- a/src/app/modules/contests/components/contest-problem-card/contest-problem-card.component.html
+++ b/src/app/modules/contests/components/contest-problem-card/contest-problem-card.component.html
@@ -61,7 +61,7 @@
               </span>
             }
           </div>
-          <div class="card-footer">
+          <div class="card-body">
             <span class="text-white">
               {{ contestProblem.solved }}
               <i data-feather="user-check"></i>
