--- a/src/app/modules/contests/components/contest-problem-card/contest-problem-card.component.scss
+++ b/src/app/modules/contests/components/contest-problem-card/contest-problem-card.component.scss
@@ -1,6 +1,6 @@
 .card {
   background: var(--bg-gradient) !important;
-  box-shadow: var(--box-shadow) !important;
+  // box-shadow: var(--box-shadow) !important;
   display: flex;
   align-items: center;
   justify-content: space-around;
