--- a/src/app/modules/contests/pages/contest/contest-attempts/filter/contest-attempts-filter.component.html
+++ b/src/app/modules/contests/pages/contest/contest-attempts/filter/contest-attempts-filter.component.html
@@ -11,7 +11,7 @@
   <div class="card-footer">
     <form [formGroup]="form" class="form">
       <div class="form-group">
-        <label class="contest-color font-weight-bolder">
+        <label class="contest-color">
           <kep-icon name="problem" size="small-2"/>
           {{ 'PROBLEM' | translate }}
         </label>
@@ -27,7 +27,7 @@
       </div>
 
       <div class="form-group">
-        <label class="contest-color font-weight-bolder">
+        <label class="contest-color">
           <kep-icon name="verdict" size="small-2"/>
           {{ 'VERDICT' | translate }}
         </label>
