--- a/src/app/modules/contests/pages/rating/rating.component.html
+++ b/src/app/modules/contests/pages/rating/rating.component.html
@@ -5,11 +5,11 @@
     <section class="mt-2">
       <kep-table [loading]="!total && isLoading">
         <ng-container header>
-          <tr class="bg-gradient-primary">
-            <th class="text-center text-white">#</th>
-            <th class="text-white">{{ 'USER' | translate }}</th>
-            <th class="text-center text-white"><kep-icon name="contest"></kep-icon></th>
-            <th class="text-center text-white"><kep-icon name="rating"></kep-icon></th>
+          <tr>
+            <th class="text-center">#</th>
+            <th class="">{{ 'USER' | translate }}</th>
+            <th class="text-center"><kep-icon name="contest"></kep-icon></th>
+            <th class="text-center"><kep-icon name="rating"></kep-icon></th>
           </tr>
         </ng-container>
         <ng-container body>
