--- a/src/app/modules/problems/components/attempts-table/table/table.component.html
+++ b/src/app/modules/problems/components/attempts-table/table/table.component.html
@@ -1,6 +1,6 @@
-<kep-table>
+<kep-table tableClass="">
   <ng-container header>
-    <tr class="bg-gradient-primary">
+    <tr>
       <th>ID</th>
       <th>
         <div class="d-flex align-items-center">
