--- a/src/app/modules/problems/pages/attempts/attempts.component.html
+++ b/src/app/modules/problems/pages/attempts/attempts.component.html
@@ -1,4 +1,4 @@
-<div class="content-wrapper container-xxl">
+<div class="content-wrapper container-xxl p-0">
   <div class="content-body">
     <app-content-header (refresh)="reloadPage()" [contentHeader]="contentHeader"></app-content-header>
 
