--- a/src/app/modules/problems/pages/problems/sections/section-problems-filter/section-problems-filter.component.scss
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-filter/section-problems-filter.component.scss
@@ -1,7 +1,7 @@
 @import 'scss/base/bootstrap-extended/variables';
 
 .card {
-  border: none;
+  // border: none;
   box-shadow: none;
   // box-shadow: var(--inherit-bg-box-shadow) !important;
   // background: inherit !important;
