--- a/src/@core/scss/base/bootstrap-extended/_card.scss
+++ b/src/@core/scss/base/bootstrap-extended/_card.scss
@@ -1,5 +1,7 @@
 .card {
-  border: none;
+  border: 1px solid white;
+  background: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px);
   margin-bottom: $content-padding;
   box-shadow: $box-shadow;
   transition: all 0.3s ease-in-out, background 0s, color 0s, border-color 0s;
