--- a/src/app/modules/arena/pages/arena-tournament/arena-challenges/arena-challenges.component.scss
+++ b/src/app/modules/arena/pages/arena-tournament/arena-challenges/arena-challenges.component.scss
@@ -1,7 +1,7 @@
 .challenge-results {
-  box-shadow: 0 0 5px #BA8B02 !important;
+  border: 1px solid #BA8B02 !important;
   border-radius: 10px;
-  border: none;
+  backdrop-filter: blur(10px);
 
   .table {
     margin-bottom: 0;
