--- a/src/app/modules/blog/post-detail/comments/comments.component.html
+++ b/src/app/modules/blog/post-detail/comments/comments.component.html
@@ -1,66 +1,72 @@
-<h2 class="mb-2">
-  {{ 'Comments' | translate }}
-  <span class="comment-count">({{ comments.length }})</span>
-</h2>
-
-@for (comment of comments; track comment.id){
-  <div
-    [@fadeInOnEnter]
-    [@fadeOutOnLeave]
-    style="border-radius: 5px;"
-    [ngClass]="{'bg-light-secondary': comment.username == currentUser?.username }"
-    >
-    <div class="media pt-1 mb-4 pl-1">
-      <img class="rounded" [src]="comment.userAvatar" alt="pic1">
-      <div class="media-body">
-        <div class="row pl-1">
-          <h4 class="media-heading text-dark">
-            <user-popover [username]="comment.username"></user-popover>,
-          </h4>
-          <p class="meta-time-date pl-1">{{ comment.created }}</p>
-        </div>
-        <h6 class="comment">
-          <mathjax [content]="comment.body"></mathjax>
-        </h6>
-        <div class="media-notation pb-1">
-          @if (comment.username != currentUser?.username) {
-            <button
-              (click)="like($index)"
-              class="mr-1 btn btn-sm round btn-relief-success"
-              >
-              <kep-icon name="like" class=""></kep-icon>
-              @if (comment.likes > 0) {
-                <span class="ml-1">{{ comment.likes }}</span>
-              }
-            </button>
-          }
-          @if (0) {
-            <button
-              class="mr-1 btn btn-sm round btn-relief-secondary"
-              >
-              <i data-feather="message-square"></i>
-            </button>
-          }
-          @if (currentUser?.isSuperuser) {
-            <button (click)="deleteComment($index)" class="btn btn-sm round btn-relief-dark">
-              <i data-feather="x"></i>
-            </button>
-          }
-        </div>
-      </div>
+<div class="card">
+  <div class="card-header">
+    <div class="card-title">
+      {{ 'Comments' | translate }}
+      <span class="comment-count">({{ comments.length }})</span>
     </div>
   </div>
-}
 
-<h4 class="mb-1">{{ 'WriteComment' | translate }}</h4>
-<quill-editor class="full-width" [(ngModel)]="comment">
-  <div quill-editor-toolbar>
+  <div class="card-body" *ngIf="comments?.length > 0">
+    @for (comment of comments; track comment.id){
+      <div
+        [@fadeInOnEnter]
+        [@fadeOutOnLeave]
+        style="border-radius: 5px;"
+        [ngClass]="{'bg-light-secondary': comment.username == currentUser?.username }"
+      >
+        <div class="media pt-1 mb-4 pl-1">
+          <img class="rounded" [src]="comment.userAvatar" alt="pic1">
+          <div class="media-body">
+            <div class="row pl-1">
+              <h4 class="media-heading text-dark">
+                <user-popover [username]="comment.username"></user-popover>,
+              </h4>
+              <p class="meta-time-date pl-1">{{ comment.created }}</p>
+            </div>
+            <h6 class="comment">
+              <mathjax [content]="comment.body"></mathjax>
+            </h6>
+            <div class="media-notation pb-1">
+              @if (comment.username != currentUser?.username) {
+                <button
+                  (click)="like($index)"
+                  class="mr-1 btn btn-sm round btn-relief-success"
+                >
+                  <kep-icon name="like" class=""></kep-icon>
+                  @if (comment.likes > 0) {
+                    <span class="ml-1">{{ comment.likes }}</span>
+                  }
+                </button>
+              }
+              @if (0) {
+                <button
+                  class="mr-1 btn btn-sm round btn-relief-secondary"
+                >
+                  <i data-feather="message-square"></i>
+                </button>
+              }
+              @if (currentUser?.isSuperuser) {
+                <button (click)="deleteComment($index)" class="btn btn-sm round btn-relief-dark">
+                  <i data-feather="x"></i>
+                </button>
+              }
+            </div>
+          </div>
+        </div>
+      </div>
+    }
+  </div>
+
+  <div class="card-footer">
+    <h4 class="mb-1">{{ 'WriteComment' | translate }}</h4>
+    <quill-editor class="full-width" [(ngModel)]="comment">
+      <div quill-editor-toolbar>
     <span class="ql-formats">
       <button class="ql-bold" [title]="'Bold'"></button>
       <button class="ql-italic" [title]="'italic'"></button>
       <button class="ql-underline" [title]="'underline'"></button>
     </span>
-    <span class="ql-formats">
+        <span class="ql-formats">
       <select class="ql-align" [title]="'Alignment'">
         <option selected></option>
         <option value="center"></option>
@@ -68,22 +74,24 @@
         <option value="justify"></option>
       </select>
     </span>
-    <span class="ql-formats">
+        <span class="ql-formats">
       <button class="ql-list" value="ordered" type="button"></button>
     </span>
-    <span class="ql-formats">
+        <span class="ql-formats">
       <button class="ql-link" value="ordered" type="button"></button>
       <button class="ql-image" value="ordered" type="button"></button>
       <button class="ql-video" value="ordered" type="button"></button>
     </span>
-    <span class="ql-formats">
+        <span class="ql-formats">
       <button class="ql-formula" value="ordered" type="button"></button>
       <button class="ql-code-block" value="ordered" type="button"></button>
     </span>
-    <span class="ql-formats">
+        <span class="ql-formats">
       <button class="ql-clean" value="ordered" type="button"></button>
     </span>
-  </div>
-</quill-editor>
+      </div>
+    </quill-editor>
 
-<button (click)="submit()" class="btn btn-relief-primary mb-1 mt-1">{{ 'Send' | translate }}</button>
+    <button (click)="submit()" class="btn btn-primary mb-1 mt-1">{{ 'Send' | translate }}</button>
+  </div>
+</div>
