--- a/src/app/modules/challenges/pages/challenge/question-card/question-card.component.html
+++ b/src/app/modules/challenges/pages/challenge/question-card/question-card.component.html
@@ -21,7 +21,7 @@
               <div
                 class="card cursor-pointer"
                 (click)="singleRadio=option.id"
-                [class]="singleRadio == option.id ? ('text-white bg-chapter-' + question.chapter.id) : 'bg-light text-dark'">
+                [class]="singleRadio == option.id ? ('text-white bg-chapter-' + question.chapter.id) : 'text-dark'">
                 <div class="card-body font-medium-4 mb-0 d-flex align-items-center justify-content-center text-center">
                   {{ option.option }}
                 </div>
@@ -81,7 +81,7 @@
               dragula="conformity-group-first"
               [(dragulaModel)]="conformityGroupFirst">
               @for (option of conformityGroupFirst; track option) {
-                <li class="list-group-item card draggable mb-50 bg-light text-dark" style="cursor: grab;">
+                <li class="list-group-item card draggable mb-50 text-dark" style="cursor: grab;">
                   <div class="card-body p-1 font-medium-2 mb-0 d-flex align-items-center justify-content-center text-center">
                     {{ option }}
                   </div>
@@ -98,7 +98,7 @@
               dragula="conformity-group-second"
               [(dragulaModel)]="conformityGroupSecond">
               @for (option of conformityGroupSecond; track option) {
-                <li class="list-group-item card draggable mb-50 bg-light text-dark" style="cursor: grab;">
+                <li class="list-group-item card draggable mb-50 text-dark" style="cursor: grab;">
                   <div class="card-body p-1 font-medium-2 mb-0 d-flex align-items-center justify-content-center text-center">
                     {{ option }}
                   </div>
