--- a/src/app/modules/contests/pages/contests/sections/section-categories/section-categories.component.html
+++ b/src/app/modules/contests/pages/contests/sections/section-categories/section-categories.component.html
@@ -10,7 +10,7 @@
 
   <div class="row">
     @for (category of categories; track category.id){
-      <div [@fadeInOnEnter] class="col-lg-3 col-md-6 col-12">
+      <div class="col-lg-3 col-md-6 col-12">
         <div class="card contest-category-card cursor-pointer" [ngClass]="{'active': category.id == activeCategory}" (click)="click(category.id)">
           <div class="card-header justify-content-start">
             <div class="category-icon mr-1">
