--- a/src/app/modules/home/activity-section/activity-section.component.html
+++ b/src/app/modules/home/activity-section/activity-section.component.html
@@ -1,20 +1,19 @@
-<h3 class="mb-2 font-weight-bolder">{{ 'Activity' | translate }} </h3>
-
 @if (statistics) {
-  <div [@fadeInOnEnter] class="card card-activity bg-gradient-primary">
+  <div [@fadeInOnEnter] class="card">
     <div class="card-header">
       <div class="card-title">
-        {{ statistics.date | localizedDate:'mediumDate' }}
+        {{ 'Activity' | translate }}
+        ({{ statistics.date | localizedDate:'mediumDate' }})
       </div>
     </div>
+
     <div class="card-body">
       <div class="statistics-info">
         @if (statistics.dailyActivity) {
           <span class="badge badge-success badge-glow">
             <kep-icon class="font-small-2" name="check-circle"></kep-icon>
           </span>
-        }
-        @if (!statistics.dailyActivity) {
+        } @else {
           <span class="badge badge-danger badge-glow">
             <kep-icon class="font-small-2" name="minus-circle"></kep-icon>
           </span>
@@ -30,7 +29,7 @@
         <div class="title">
           {{ 'Attempts' | translate }}:
         </div>
-        <strong class="font-medium-1">{{ statistics.attempts }}</strong>
+        <span class="font-medium-1">{{ statistics.attempts }}</span>
       </div>
       <div class="statistics-info">
         <span class="badge badge-primary badge-glow">
@@ -39,7 +38,7 @@
         <div class="title">
           {{ 'Problems' | translate }}:
         </div>
-        <strong class="font-medium-1">{{ statistics.problems }}</strong>
+        <span class="font-medium-1">{{ statistics.problems }}</span>
       </div>
       <div class="statistics-info">
         <span class="badge badge-primary badge-glow">
@@ -64,7 +63,7 @@
         <div class="title">
           {{ 'Tests' | translate }}:
         </div>
-        <strong class="font-medium-1">{{ statistics.tests }}</strong>
+        <span class="font-medium-1">{{ statistics.tests }}</span>
       </div>
     </div>
     <div class="card-footer d-flex justify-content-between">
