--- a/src/app/modules/home/birthdays-section/birthdays-section.component.html
+++ b/src/app/modules/home/birthdays-section/birthdays-section.component.html
@@ -1,6 +1,8 @@
 <div class="card">
   <div class="card-header">
-    <h4><strong>{{ 'BirthDays' | translate }}</strong></h4>
+    <div class="card-title">
+      {{ 'BirthDays' | translate }}
+    </div>
   </div>
 
   @if (skeletonVisible) {
@@ -30,9 +32,7 @@
             <h5 class="media-heading">
               <user-popover [username]="birthDay.username"></user-popover>
             </h5>
-            <span class="badge badge-light-primary">
-              {{ birthDay.date }}
-            </span>
+            ({{ birthDay.date | localizedDate:'mediumDate' }})
           </div>
         </div>
       }
