--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,33 +1,13 @@
-<!--<div class="content-wrapper container-xxl p-0">-->
-<!--  <div class="content-body">-->
-<!--    <div class="row">-->
-<!--      <div class="col-9">-->
-<!--        <div class="row">-->
-<!--          <div class="col-9">-->
-<!--            <news-section/>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <last-problems-section/>-->
-<!--      </div>-->
-<!--      <div class="col-3 border-left-2 border-left">-->
-<!--        <contests-section/>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
-<div class="row">
-  <div class="col-12 header-section">
-    <header-section></header-section>
-  </div>
-</div>
-<div class="content-wrapper container-xxl p-0">
+<div class="content-wrapper container-xl p-0">
   <div class="content-body">
+    <header-section></header-section>
+
     <div class="row">
-      <div class="offset-lg-1 offset-0 col-lg-6 col-md-8 col-12">
+      <div class="col-lg-6 col-md-8 col-12">
         <news-section/>
       </div>
 
-      <div class="col-lg-4 col-md-4 col-sm-12">
+      <div class="col-lg-6 col-md-4 col-sm-12">
         <activity-section></activity-section>
         <profile-section></profile-section>
       </div>
@@ -80,7 +60,7 @@
             @defer (on viewport){
               <birthdays-section></birthdays-section>
             } @placeholder (minimum 500ms) {
-              <div class="card" [style.height.px]="600">
+              <div class="card" [style.height.px]="485">
                 <spinner></spinner>
               </div>
             }
