--- a/src/app/modules/home/profile-section/profile-section.component.html
+++ b/src/app/modules/home/profile-section/profile-section.component.html
@@ -1,55 +1,81 @@
-<h3 class="mb-2 mt-2 font-weight-bolder">{{ 'Ratings' | translate }} </h3>
 @if (skeletonVisible) {
   <div class="item">
     <ngx-skeleton-loader
       count="1"
       animation="pulse"
       appearance="line"
-      [theme]="{height: '80px', background: 'var(--skeleton-color)'}"
+      [theme]="{height: '167px', background: 'var(--skeleton-color)'}"
     ></ngx-skeleton-loader>
   </div>
-}
+} @else {
+  <div class="card">
+    <div class="card-header">
+      <div class="card-title">
+        {{ 'Ratings' | translate }}
+      </div>
+    </div>
 
-@if (userRatings) {
-  <div [@fadeInOnEnter] class="card">
-    <div class="card-body d-flex justify-content-between">
-      <div class="d-block">
-        <h6 class="font-weight-bolder">
-          <kep-icon class="font-small-4" name="contest"></kep-icon> {{ 'MENU.CONTESTS' | translate }}
-        </h6>
-        <div class="mb-0 mt-1 text-center">
-          <contests-rating-image [size]="24" [title]="userRatings.contestsRatingTitle"></contests-rating-image>
-          <span class="badge badge-light-{{ userRatings.contestsRating | contestsRatingColor }}">
-            {{ userRatings.contestsRating }}
-          </span>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-4">
+          <div class="card mb-0">
+            <div class="card-header p-50">
+              <div class="">
+                <kep-icon class="font-small-4" name="contest"></kep-icon> {{ 'MENU.CONTESTS' | translate }}
+              </div>
+            </div>
+
+            <div class="card-body p-50">
+              <contests-rating-image [size]="24" [title]="userRatings.contestsRatingTitle"></contests-rating-image>
+              <span class="badge badge-light-{{ userRatings.contestsRating | contestsRatingColor }}">
+                {{ userRatings.contestsRating }}
+              </span>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="d-block">
-        <h6 class="font-weight-bolder">
-          <kep-icon class="font-small-4" name="problem"></kep-icon> {{ 'MENU.PROBLEMS' | translate }}
-        </h6>
-        <div class="mb-0 mt-1 text-center">
-          <span class="badge badge-primary">
-            {{ userRatings.problemsSolved }}
-          </span>
-          <span class="badge ml-25 badge-light-success">
-            {{ userRatings.problemsRating }}
-          </span>
+
+
+        <div class="col-4">
+          <div class="card mb-0">
+            <div class="card-header p-50">
+              <div class="">
+                <kep-icon class="font-small-4" name="problem"></kep-icon> {{ 'MENU.PROBLEMS' | translate }}
+              </div>
+            </div>
+
+            <div class="card-body p-50">
+              <span class="badge badge-primary">
+                {{ userRatings.problemsSolved }}
+              </span>
+              <span class="badge ml-25 badge-light-success">
+                {{ userRatings.problemsRating }}
+              </span>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="d-block">
-        <h6 class="font-weight-bolder">
-          <kep-icon class="font-small-4" name="challenge"></kep-icon> {{ 'MENU.CHALLENGES' | translate }}
-        </h6>
-        <div class="d-block mb-0 mt-1 text-center text-{{ userRatings.challengesRankTitle | challengesRankColor }}">
-          <span class="badge badge-pill badge-glow badge-{{ userRatings.challengesRankTitle | challengesRankColor }}">
-            {{ userRatings.challengesRankTitle }}
-          </span>
-          <span class="badge badge-light-{{ userRatings.challengesRankTitle | challengesRankColor }}">
-            {{ userRatings.challengesRating }}
-          </span>
+
+        <div class="col-4">
+          <div class="card mb-0">
+            <div class="card-header p-50">
+              <div class="">
+                <kep-icon class="font-small-4" name="challenge"></kep-icon> {{ 'MENU.CHALLENGES' | translate }}
+              </div>
+            </div>
+
+            <div class="card-body p-50">
+              <div class="text-{{ userRatings.challengesRankTitle | challengesRankColor }}">
+                <span class="badge badge-pill badge-glow badge-{{ userRatings.challengesRankTitle | challengesRankColor }}">
+                  {{ userRatings.challengesRankTitle }}
+                </span>
+                <span class="badge badge-light-{{ userRatings.challengesRankTitle | challengesRankColor }}">
+                  {{ userRatings.challengesRating }}
+                </span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
+
 }
