--- a/src/app/modules/problems/components/attempts-filter/attempts-filter.component.html
+++ b/src/app/modules/problems/components/attempts-filter/attempts-filter.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="form" class="card bg-white shadow-none">
+<div [formGroup]="form" class="card">
   <div class="card-header">
     <div class="card-title">
       <kep-icon name="filter"/>
