--- a/src/app/modules/problems/pages/problems/category/category.component.html
+++ b/src/app/modules/problems/pages/problems/category/category.component.html
@@ -36,9 +36,9 @@
             </div>
           } @else {
             <div class="table-responsive beautiful-table">
-              <table class="table table-striped">
+              <table class="table">
                 <thead>
-                  <tr class="bg-gradient-primary">
+                  <tr>
                     <th>
                       <kep-icon name="user"></kep-icon>
                       {{ 'User' | translate }}
@@ -58,7 +58,7 @@
                 <tbody>
                   @for (user of topUsers; track user.username) {
                     <tr>
-                      <td>
+                      <td class="text-nowrap">
                         <user-popover [customContent]="true" [username]="user.username">
                           <img width="32" height="32" class="round mr-50" alt="user-avater" [src]="user.avatar">
                           {{ user.username }}
