--- a/src/app/styles/vuexy-extended/skeleton.scss
+++ b/src/app/styles/vuexy-extended/skeleton.scss
@@ -1,7 +1,7 @@
 :root {
-  --skeleton-color: #dedede;
+  --skeleton-color: rgba(255, 255, 255, 0.5);
 }
 
 :root .dark-layout {
-  --skeleton-color: #15171c;
+  --skeleton-color: rgba(0, 0, 0, 0.5);
 }
