--- a/src/bootstrap/scss/_tables.scss
+++ b/src/bootstrap/scss/_tables.scss
@@ -12,16 +12,16 @@
   td {
     padding: $table-cell-padding;
     vertical-align: top;
-    border-top: $table-border-width solid $table-border-color;
+    // border-top: $table-border-width solid $table-border-color;
   }
 
   thead th {
     vertical-align: bottom;
-    border-bottom: (2 * $table-border-width) solid $table-border-color;
+    // border-bottom: (2 * $table-border-width) solid $table-border-color;
   }
 
   tbody + tbody {
-    border-top: (2 * $table-border-width) solid $table-border-color;
+    // border-top: (2 * $table-border-width) solid $table-border-color;
   }
 }
 
