--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,23 @@
 @import 'dragula/dist/dragula.css';
 
 @import 'styles/primeng-sass/theme-base/components/multimedia/galleria';
+
+.kep-bg {
+  background-image: url(assets/images/kep-bg-light.webp);
+  filter: blur(0px);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 1;
+}
+
+.dark-layout .kep-bg {
+  background-image: url(assets/images/kep-bg-dark.webp);
+  opacity: 0.5;
+}
+
+body:has(app-contest-standings) .kep-bg {
+  background-image: none !important;
+}
